--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -52,13 +52,13 @@
 
       .language-vn {
         cursor: pointer;
-        &:active {
+        &.active {
           color: orange;
         }
       }
 
       .language-en {
-        &:active {
+        &.active {
           color: orange;
         }
         cursor: pointer;
