--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -8,19 +8,13 @@
   color: $common-text-color;
   height: 40px;
   position: relative;
-  .btn-logout {
-    color: $common-text-color;
-    line-height: 40px;
-    height: 40px;
-    padding: 0 10px;
-    &:hover {
-      background-color: darken($colormain, 5);
-    }
-    i {
-      font-size: $base-size + 1px;
-    }
-  }
+
   .languages {
+    display: flex;
+    align-items: center;
+    .welcome {
+      margin-right: 10px;
+    }
     .language-vi {
       cursor: pointer;
       &.active {
@@ -35,6 +29,18 @@
       &.active {
         opacity: 1;
         color: blue;
+      }
+    }
+    .btn-logout {
+      color: $common-text-color;
+      line-height: 40px;
+      height: 40px;
+      padding: 0 10px;
+      &:hover {
+        background-color: darken($colormain, 5);
+      }
+      i {
+        font-size: $base-size + 1px;
       }
     }
   }
