--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -16,8 +16,7 @@
       display: flex;
       align-items: center;
       .header-logo {
-        background: url("../../assets/bookingcare-2020.svg") center center
-          no-repeat;
+        background: url("../../assets/logo.png") center center no-repeat;
         height: 100%;
         width: 100%;
         cursor: pointer;
